--- a/src/assets/styles/Skills.module.css
+++ b/src/assets/styles/Skills.module.css
@@ -22,3 +22,14 @@
     width: 100;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .text {
+    text-align: left;
+    font-size: .7rem;
+    max-width: 100%;
+  }
+  .rotation > div > div > b {
+    width: 100;
+  }
+}
